Fixes issue where column is too small if no competition description is given

--- a/src/static/stylus/home.styl
+++ b/src/static/stylus/home.styl
@@ -78,6 +78,7 @@ body
   .vert-wrap
     margin-right 3em
     max-width 770px
+    min-width 600px
 
     .segment-container
       width 100%
